refactor: replace deprecated method calls (Strings.CI, reflection, AWT, Thread) (#7703)
* refactor: use Strings.CI.contains over deprecated StringUtils.containsIgnoreCase

Commons Lang 3.18 deprecated StringUtils.containsIgnoreCase(CharSequence,
CharSequence) in favour of Strings.CI.contains. Drop-in replacement with
identical case-insensitive, null-safe semantics.

* refactor: replace deprecated JDK reflection and AWT calls

- Class.newInstance() -> getDeclaredConstructor().newInstance() at the five
  plugin-loader sites whose methods already declare throws Exception, so the
  new ReflectiveOperationException subtypes are covered.
- MouseEvent's InputEvent.getModifiers() -> getModifiersEx() when
  reconstructing the translated event in JTreeTable.

* test: use Thread.threadId() over deprecated getId()

Follow-up to PR #7696: the opener-thread branch still used the deprecated
Thread.getId(); align it with the caller line's threadId().